--- a/app-fusebox/css/demo.css
+++ b/app-fusebox/css/demo.css
@@ -39,11 +39,13 @@ content > div {
 }
 
 .demo-wrapper > div.demo-menu {
-  height: 20px;
+  height: 15px;
 }
 
 .demo-wrapper > div.demo-menu > * {
-  padding: 5px;
+  padding-top: 5px;
+  padding-left: 5px;
+  padding-bottom: 2px;
 }
 
 .nbe-graph {
