--- a/demos/fusebox/css/wireflow.css
+++ b/demos/fusebox/css/wireflow.css
@@ -231,6 +231,28 @@
    width: 200px;
    height: 100px;
    overflow: hidden;
+
+   opacity: 1;
+   visibility: visible;
+   transition: visibility 0s linear, opacity 0.5s linear;
+}
+
+.nbe-minimap.nbe-hidden {
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility .5s, opacity 0.5s linear;
+}
+
+.nbe-minimap .nbe-minimap-handle {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 16px 16px 0;
+  border-color: transparent orange transparent transparent;
+
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .nbe-minimap .nbe-minimap-viewport {
